# ChessMasta

./: .gitignore  Cargo.toml  Dockerfile
migrations/2018-06-28-232123_create_moves/: down.sql  up.sql
src/: main.rs  models.rs  rest_api.rs  routes.rs  schema.rs  utils.rs  web_interface.rs
static/css/: style.css
templates/: base.tera  create.tera  index.tera  menu.tera  move_details.tera  move_list.tera  non_root_move.tera  style.scss
