[package]
name = "chess_masta"
version = "0.1.0"
authors = ["Paul Lesur <paul.lesur59@gmail.com>"]

[dependencies]
rocket = "0.3.14"
rocket_codegen = "0.3.14"
diesel = { version = "1.3.0", features = ["sqlite"] }
dotenv = "0.10.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.3.14"
default-features = false
features = ["tera_templates", "json"]